# deon

./: .envrc.shared  .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  flake.nix
.github/rulesets/: main.json
.github/workflows/: ci.yml
crates/deon/: Cargo.toml
crates/deon/examples/: financial-instrument-classification.okf.md  lease-classification.okf.md  revenue-recognition-timing.okf.md
crates/deon/src/: cover.rs  expr.rs  leak.rs  lib.rs  main.rs  seam.rs
crates/deon/tests/: coverage.rs  leaks.rs  regime.rs
crates/deon/tests/fixtures/: claim-shapes.okf.md  conflicting.okf.md  leaky.okf.md  mixed-forms.okf.md  near-miss.okf.md  three-case.okf.md  uncovered.okf.md  ungrounded.okf.md  wrong-regime.okf.md
crates/deon/tests/fixtures/okf/: concepts.md
crates/deon/tests/fixtures/okf-states/: performance-obligation.md
crates/deon/tests/fixtures/okf-unreadable/: broken-frontmatter.md  no-states-list.md
crates/okf-graph/: Cargo.toml
crates/okf-graph/src/: concept.rs  lib.rs
crates/okf-graph/tests/: concept.rs
crates/okf-normative/: Cargo.toml
crates/okf-normative/src/: lib.rs
docs/: DESIGN.md  architecture.md
docs/probes/: ias32-liability-vs-equity.md
docs/spikes/: lease-classification.md  revenue-recognition-timing.md
examples/: lease-classification.okf.md  revenue-recognition-timing.okf.md
scripts/: merge.sh  settings.sh
src/: conflict.rs  cover.rs  ground.rs  leak.rs  lib.rs  main.rs  okf.rs  regime.rs  seam.rs
tests/: conflict.rs  coverage.rs  grounding.rs  leaks.rs  termination.rs
tests/fixtures/: near-miss.okf.md  three-case.okf.md  ungrounded.okf.md  unterminated.okf.md
tests/fixtures/okf-bad-states/: concepts.md
tests/fixtures/okf-states/: performance-obligation.md
tests/fixtures/okf-unreadable/: prose-only.md
