[workspace]
resolver = "2"
members = ["crates/okf-graph", "crates/okf-normative", "crates/deon"]

# Shared across every crate here. Individual crates set their own `description`.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ojhermann-org/okf-tools"

[workspace.dependencies]
okf-graph = { path = "crates/okf-graph", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
